--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
 Flask-WTF==1.2.2
+Flask-SQLAlchemy==3.0.0
 greenlet==3.2.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
