--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.1
+Flask-WTF==1.2.2
+Flask-SQLAlchemy==3.0.0
+greenlet==3.2.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+psycopg2==2.9.10
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 Werkzeug==3.1.3
-psycopg2-binary
+WTForms==3.2.1
 email-validator
